[project]
name = "python-course"
version = "0.0.1"
description = "My awsome Python project."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["matplotlib","numpy","astropy","scipy"]
authors = [
    {name = "Jude Wijesekera", email = "vijayanga18@gmail.com"},
]

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"
